--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 
 <body>
-  <div id="root">
-  </div>
-
+  <div id="root"></div>
   <script src="./sql.js"></script>
-  <script src="./script.js"></script>
+  <script src="./newscript.js"></script>
 </body>
+
 
 </html>
