--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="root"></div>
   <script src="./sql.js"></script>
+  <script src="./frontend.js"></script>
   <script src="./newscript.js"></script>
 </body>
 
